python/test-data/testTypesDict3.err
Traceback (most recent call last):
  File "test-data/testTypesDict3.py", line 11, in <module>
    foo({'y': func})
  File "test-data/testTypesDict3.py", line 7, in foo
    res.append(f())
WyppTypeError: got value of wrong type
given:    42
expected: value of type str

context: __next__(self: Self) -> tuple[str, Callable[[], str]]
                                                         ^^^
declared at: test-data/testTypesDict3.py:4
caused by: test-data/testTypesDict3.py:4
  |     d['x'] = lambda: 42 # error
